// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormOpenHouse renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: none;
}

<form
    data-netlify="true"
    data-netlify-honeypot="bot-field"
    method="POST"
    name="open-house"
  >
    <input
      class="c0"
      name="bot-field"
    />
    <input
      name="form-name"
      type="hidden"
      value="open-house"
    />
    <label
      for="name"
    >
      <span
        class="visuallyhidden"
      >
        Name
      </span>
      <input
        id="name"
        name="name"
        placeholder="Name"
        required=""
        type="text"
      />
    </label>
    <label
      for="email"
    >
      <span
        class="visuallyhidden"
      >
        Email
      </span>
      <input
        id="email"
        name="email"
        placeholder="Email"
        required=""
        type="email"
      />
    </label>
    <input
      name="program"
      type="hidden"
      value=""
    />
    <input
      type="submit"
      value="Sign up"
    />
  </form>
</DocumentFragment>
`;

exports[`FormOpenHouse renders correctly with button text 1`] = `
<DocumentFragment>
  .c0 {
  display: none;
}

<form
    data-netlify="true"
    data-netlify-honeypot="bot-field"
    method="POST"
    name="open-house"
  >
    <input
      class="c0"
      name="bot-field"
    />
    <input
      name="form-name"
      type="hidden"
      value="open-house"
    />
    <label
      for="name"
    >
      <span
        class="visuallyhidden"
      >
        Name
      </span>
      <input
        id="name"
        name="name"
        placeholder="Name"
        required=""
        type="text"
      />
    </label>
    <label
      for="email"
    >
      <span
        class="visuallyhidden"
      >
        Email
      </span>
      <input
        id="email"
        name="email"
        placeholder="Email"
        required=""
        type="email"
      />
    </label>
    <input
      name="program"
      type="hidden"
      value=""
    />
    <input
      type="submit"
      value="Hit the button"
    />
  </form>
</DocumentFragment>
`;

exports[`FormOpenHouse renders correctly with program 1`] = `
<DocumentFragment>
  .c0 {
  display: none;
}

<form
    data-netlify="true"
    data-netlify-honeypot="bot-field"
    method="POST"
    name="open-house"
  >
    <input
      class="c0"
      name="bot-field"
    />
    <input
      name="form-name"
      type="hidden"
      value="open-house"
    />
    <label
      for="name"
    >
      <span
        class="visuallyhidden"
      >
        Name
      </span>
      <input
        id="name"
        name="name"
        placeholder="Name"
        required=""
        type="text"
      />
    </label>
    <label
      for="email"
    >
      <span
        class="visuallyhidden"
      >
        Email
      </span>
      <input
        id="email"
        name="email"
        placeholder="Email"
        required=""
        type="email"
      />
    </label>
    <input
      name="program"
      type="hidden"
      value="new program"
    />
    <input
      type="submit"
      value="Sign up"
    />
  </form>
</DocumentFragment>
`;
